[tool.poetry]
name = "codepost-powertools"
version = "0.1.0"
description = "Some helpful codePost tools to aid with grading flow."
authors = ["Joseph Lou <jdlou@princeton.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "codepost_powertools", from = "src"}]

[tool.poetry.scripts]
cptools = "codepost_powertools.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
pylint = "^2.15.9"
yapf = "^0.32.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
