[tool.black]
line_length = 79

[tool.isort]
profile = "black"

[tool.poetry]
name = "codepost-powertools"
version = "0.1.0"
description = "Some helpful codePost tools to aid with grading flow."
authors = ["Joseph Lou <jdlou@princeton.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "codepost_powertools", from = "src"}]

[tool.poetry.scripts]
cptools = "codepost_powertools.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# as of 2023-01-02, sphinx-rtd-theme v1.1.1 does not allow sphinx v6.0.0,
# released on 2022-12-29. Thus, I have to use sphinx@^5.3.0
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
